tests/baselines/reference/unusedMultipleParameters2InMethodDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts(2,20): error TS6133: 'person' is declared but its value is never read.
tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts(2,36): error TS6133: 'person2' is declared but its value is never read.
tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts(2,53): error TS6133: 'person3' is declared but its value is never read.
tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts(3,13): error TS6133: 'unused' is declared but its value is never read.


==== tests/cases/compiler/unusedMultipleParameters2InMethodDeclaration.ts (4 errors) ====
    class Dummy {
        public greeter(person: string, person2: string, person3: string) {
                       ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
                                       ~~~~~~~
!!! error TS6133: 'person2' is declared but its value is never read.
                                                        ~~~~~~~
!!! error TS6133: 'person3' is declared but its value is never read.
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
            person2 = "dummy value";
        }
    }